<resources>
    <string name="NATIVE_APP_KEY">bf0335fc98f5ce0025b31377986a4e14</string>
    <string name="model">ssd_mobilenet</string>
    <string name="manual">manual</string>
    <string name="app_name">스톤에이지월드 하자</string>
    <string name="app_service">스톤에이지월드 하자 서비스</string>
    <string name="app_service_start">스톤에이지월드 하자 서비스가 시작되었습니다.</string>
    <string name="app_service_thread_stop">정지되었습니다.</string>
    <string name="app_service_thread_start">시작되었습니다.</string>
    <string name="app_service_stop">스톤에이지월드 하자 서비스가 종료되었습니다.</string>
    <string name="channel_name">스톤에이지월드 하자</string>
    <string name="channel_description">스톤에이지월드 하자</string>
    <string name="accessibility_service_label">스톤에이지월드 하자</string>
    <string name="accessibility_service_description_need">클릭권한이 필요합니다.</string>
    <string name="accessibility_service_description_noti">종료하기.</string>
    <string name="accessibility_service_description_xml">클릭권한을 사용합니다.</string>
    <string name="start_txt">시작하기</string>

    <string name="kakao_login">카톡.로그인</string>
    <string name="click_setting_btn">클릭설정</string>
    <string name="clickable">클릭권한이 있습니다.</string>
    <string name="need_click">클릭권한이 필요합니다.</string>
    <string name="clickable_switch">클릭</string>
    <string name="disassembly_counter">분해 카운터</string>
    <string name="disassembly_counter_init">초기화</string>
    <string name="clickable_switch_on">사용</string>
    <string name="clickable_switch_off">안함</string>

    <string name="kakao_login_need">카톡.로그인 하세요.</string>
    <string name="kakao_login_succeed">카톡.로그인 성공!</string>
    <string name="kakao_logout_succeed">카톡.로그아웃 성공!</string>
    <string name="kakao_send">카톡.알림테스트</string>
    <string name="kakao_send_switch">카톡알림</string>
    <string name="kakao_send_switch_on">수신</string>
    <string name="kakao_send_switch_off">거부</string>

    <string name="exit_txt">종료하기</string>
    <string name="danger_txt">경고</string>
    <string name="sample_txt">샘플</string>
    <string name="over_start_txt">실행</string>
    <string name="over_stop_txt">정지</string>
    <string name="rect_layout_start_txt">보임</string>
    <string name="rect_layout_stop_txt">숨김</string>
    <string name="app_orientation_changed_start">화면 회전시작</string>
    <string name="app_orientation_changed_stop">화면 회전시작</string>
    <string name="dialog_title">경고</string>
    <string name="dialog_message">이 어플은
       머신러닝으로 버튼이미지를 학습시켜 클릭 이벤트를 발생시킵니다.
       학습한것과 비슷한 버튼 이미지가 클릭될수 있고 그에 따른 책임을 지지 않습니다.
       가방이나 결제 화면등 중요한 화면에서는 어플을 종료후 이용하세요.
    </string>
    <string name="agree">동의</string>
    <string name="not_agree">동의 안함</string>
    <string name="preference_file_key">welcome</string>

    <string name="gsDialog_title">터치 권한을 주세요.</string>
    <string name="gsDialog_context">
    확인을 누르면 설정페이지로 이동합니다.\n
    %s 터치하여 사용권한을 주세요.
    </string>
    <string name="gsDialog_action">확인</string>

    <string name="wakeup">일어나</string>

    <string name="label_1">이름 1</string>
    <string name="label_2">이름 2</string>
    <string name="label_3">이름 3</string>
    <string name="label_4">이름 4</string>
    <string name="label_5">이름 5</string>
    <string name="label_6">이름 6</string>
    <string name="label_7">이름 7</string>
    <string name="label_8">이름 8</string>
    <string name="label_9">이름 9</string>
    <string name="label_10">이름 10</string>
    <string name="label_11">이름 11</string>
    <string name="label_12">이름 12</string>
    <string name="label_13">이름 13</string>
    <string name="label_14">이름 14</string>
    <string name="label_15">이름 15</string>
    <string name="label_16">이름 16</string>
    <string name="label_17">이름 17</string>
    <string name="label_18">이름 18</string>
    <string name="label_19">이름 19</string>
    <string name="label_20">이름 20</string>
    <string name="label_21">이름 21</string>
    <string name="label_22">이름 22</string>
    <string name="label_23">이름 23</string>
    <string name="label_24">이름 24</string>
    <string name="label_25">이름 25</string>
    <string name="label_26">이름 26</string>
    <string name="label_27">이름 27</string>
    <string name="label_28">이름 28</string>
    <string name="label_29">이름 29</string>
    <string name="label_30">이름 30</string>
    <string name="label_31">이름 31</string>
    <string name="label_32">이름 32</string>
    <string name="label_33">이름 33</string>
    <string name="label_34">이름 34</string>
    <string name="label_35">이름 35</string>
    <string name="label_36">이름 36</string>
    <string name="label_37">이름 37</string>
    <string name="label_38">이름 38</string>
    <string name="label_39">이름 39</string>
    <string name="label_40">이름 40</string>
    <string name="label_41">이름 41</string>
    <string name="label_42">이름 42</string>
    <string name="label_43">이름 43</string>
    <string name="label_44">이름 44</string>
    <string name="label_45">이름 45</string>
    <string name="label_46">이름 46</string>
    <string name="label_47">이름 47</string>
    <string name="label_48">이름 48</string>
    <string name="label_49">이름 49</string>
    <string name="label_50">이름 50</string>
    <string name="label_51">이름 51</string>
    <string name="label_52">이름 52</string>
    <string name="label_53">이름 53</string>
    <string name="label_54">이름 54</string>
    <string name="label_55">이름 55</string>
    <string name="label_56">이름 56</string>
    <string name="label_57">이름 57</string>
    <string name="label_58">이름 58</string>
    <string name="label_59">이름 59</string>
    <string name="label_60">이름 60</string>
    <string name="label_61">이름 61</string>
    <string name="label_62">이름 62</string>
    <string name="label_63">이름 63</string>
    <string name="label_64">이름 64</string>
    <string name="label_65">이름 65</string>
    <string name="label_66">이름 66</string>
    <string name="label_67">이름 67</string>
    <string name="label_68">이름 68</string>
    <string name="label_69">이름 69</string>
    <string name="label_70">이름 70</string>
    <string name="label_71">이름 71</string>
    <string name="label_72">이름 72</string>
    <string name="label_73">이름 73</string>
    <string name="label_74">이름 74</string>
    <string name="label_75">이름 75</string>
    <string name="label_76">이름 76</string>
    <string name="label_77">이름 77</string>
    <string name="label_78">이름 78</string>
    <string name="label_79">이름 79</string>
    <string name="label_80">이름 80</string>



</resources>